Fix alignement sponsors & ajout billeteries

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -43,6 +43,7 @@ html {
   }
 }
 
+
 header {
   top: 0;
   z-index: 3;
@@ -172,7 +173,7 @@ section {
   max-width: 65vw;
   margin: 0 auto;
   padding: 50px 0;
-  text-align-last: center;
+  text-align: center;
 }
 
 
@@ -306,32 +307,23 @@ table {
 
 
 #sponsors {
-  text-align-last: center;
   background-color: white;
-  .container {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 50px 0;
-  }
+
   img {
     padding: 10px;
-    border-radius: 10px;
-    margin: 1% 0 2% 0;
+    margin: 4% 0 2% 0;
     vertical-align: middle;
+
     &.long {
       width: 200px;
       height: auto;
     }
+
     &.square {
       width: auto;
       height: 150px;
     }
   }
-  .helper {
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-}
 }
 
 
